// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Components - Login Snapshots renders user authenticated 1`] = `
<div>
  Should render this
</div>
`;

exports[`App Components - Login Snapshots renders user not authenticated mobile 1`] = `
<div
  className="ui center aligned container"
>
  <h1
    className="ui header"
    style={
      Object {
        "fontSize": "2em",
        "marginTop": "1em",
      }
    }
  >
    Welcome
  </h1>
  <h3
    className="ui header"
  >
    Please log in with Spotify to start.
  </h3>
</div>
`;

exports[`App Components - Login Snapshots renders user not authenticated no mobile 1`] = `
<div
  className="ui center aligned container"
>
  <h1
    className="ui header"
    style={
      Object {
        "fontSize": "4em",
        "marginTop": "1.5em",
      }
    }
  >
    Welcome
  </h1>
  <h2
    className="ui header"
  >
    Please log in with Spotify to start.
  </h2>
</div>
`;

exports[`App Components - Login Snapshots renders user not loaded 1`] = `
<div
  className="ui basic segment body"
>
  <div
    className="ui active transition visible inverted dimmer"
    onClick={[Function]}
  >
    <div
      className="content"
    >
      <div
        className="center"
      >
        <div
          className="ui big inverted loader"
        />
      </div>
    </div>
  </div>
</div>
`;
